<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.salman.inclass03akarsh.DisplayActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewStudent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="43dp"
        android:text="Name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView13"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_toEndOf="@+id/textView13"
        android:layout_toRightOf="@+id/textView13"
        android:text="@string/name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView13"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="29dp"
        android:text="Email"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView15"
        android:layout_alignLeft="@+id/textViewName"
        android:layout_alignStart="@+id/textViewName"
        android:text="@string/email"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:text="Department"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/imageEditName"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/textViewName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:onClick="editName"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_action_edit" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/imageEditName"
        android:layout_alignStart="@+id/imageEditName"
        android:layout_below="@+id/imageEditName"
        android:onClick="editEmail"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_action_edit" />

    <TextView
        android:id="@+id/textViewDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView19"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/textView17"
        android:layout_toRightOf="@+id/textView17"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_alignStart="@+id/imageButton2"
        android:layout_below="@+id/imageButton2"
        android:onClick="editDepartment"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_action_edit" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView17"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="29dp"
        android:text="Mood"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewEmail"
        android:layout_alignStart="@+id/textViewEmail"
        android:layout_alignTop="@+id/textView19"
        android:textSize="20sp"
        tools:text="@string/mood" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_alignStart="@+id/imageButton3"
        android:layout_below="@+id/imageButton3"
        android:onClick="editMood"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_action_edit" />

    <TextView
        android:id="@+id/textViewStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Student Information"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>
